--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "devDependencies": {
         "tsup": "^8.5.0",
         "typescript": "^5.8.3"
+    },
+    "dependencies": {
+        "sharp": "^0.34.2"
     }
 }
