--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,9 @@
         "outDir": "dist",
         "strict": true,
         "esModuleInterop": true,
-        "skipLibCheck": true
+        "skipLibCheck": true,
+        "allowSyntheticDefaultImports": true,
+        "resolveJsonModule": true
     },
     "include": ["src"]
 }
