--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "license": "ISC",
     "description": "",
     "devDependencies": {
+        "@types/react": "^19.1.5",
+        "@types/react-dom": "^19.1.5",
         "tsup": "^8.5.0",
         "typescript": "^5.8.3"
     },
     "dependencies": {
+        "react": "^19.1.0",
+        "react-dom": "^19.1.0",
         "sharp": "^0.34.2"
     }
 }
