--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
     "name": "letter-art",
-    "version": "1.0.0",
-    "main": "index.js",
+    "version": "1.0.1",
+    "type": "module",
+    "main": "./dist/index.mjs",
+    "module": "./dist/index.mjs",
+    "bin": {
+        "letter-art": "./dist/cli.mjs"
+    },
     "exports": {
         ".": {
             "import": "./dist/index.mjs"
