--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "letter-art",
-    "version": "1.0.1",
+    "version": "1.1.0",
     "type": "module",
     "main": "./dist/index.mjs",
     "module": "./dist/index.mjs",
@@ -9,10 +9,16 @@
     },
     "exports": {
         ".": {
-            "import": "./dist/index.mjs"
+            "import": "./dist/index.mjs",
+            "types": "./dist/index.d.ts"
         },
         "./react": {
-            "import": "./dist/react/AsciiArt.mjs"
+            "import": "./dist/react/index.mjs",
+            "types": "./dist/react/index.d.ts"
+        },
+        "./api/asciiHandler": {
+            "import": "./dist/api/asciiHandler.mjs",
+            "types": "./dist/api/asciiHandler.d.ts"
         }
     },
     "scripts": {
@@ -24,6 +30,7 @@
     "license": "ISC",
     "description": "",
     "devDependencies": {
+        "@types/node": "^22.15.21",
         "@types/react": "^19.1.5",
         "@types/react-dom": "^19.1.5",
         "tsup": "^8.5.0",
