--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "letter-art",
-    "version": "1.1.0",
+    "version": "1.1.4",
     "type": "module",
     "main": "./dist/index.mjs",
     "module": "./dist/index.mjs",
@@ -19,10 +19,15 @@
         "./api/asciiHandler": {
             "import": "./dist/api/asciiHandler.mjs",
             "types": "./dist/api/asciiHandler.d.ts"
+        },
+        "./next-api": {
+            "import": "./dist/api/next-api.mjs",
+            "types": "./dist/api/next-api.d.ts"
         }
     },
     "scripts": {
-        "build": "tsup",
+        "clean": "rm -rf dist",
+        "build": "npm run clean && tsup",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
