--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "letter-art",
-    "version": "1.1.4",
+    "version": "1.1.5",
     "type": "module",
     "main": "./dist/index.mjs",
     "module": "./dist/index.mjs",
@@ -33,7 +33,7 @@
     "keywords": [],
     "author": "",
     "license": "ISC",
-    "description": "",
+    "description": "Simple server-side ASCII art generator for Next.js with image-to-text rendering and multiple character presets.",
     "devDependencies": {
         "@types/node": "^22.15.21",
         "@types/react": "^19.1.5",
